# try-claude-computer-use

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  setup.sh
.github/workflows/: ci.yaml
constraints/: python3.12-linux-x86_64.txt
src/llm_try/util/: env_manager.py
tests/util/: test_env_manager.py
