[project]
name = "llm-try"
version = "0.1.0"
description = "llm-try app repo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "load-dotenv>=0.1.0",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
]
[project.optional-dependencies]
typing = [
    "mypy>=1.11.2",
]
docs = [
    "sphinx>=8.1.2",
]
tests = [
    "freezegun>=1.5.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.3",
    "pytest-xdist>=3.6.1",
    "pytest-html>=4.1.1",
    "pytest-randomly>=3.16.0",
    "pytest-sugar>=1.0.0",
    "pytest-clarity>=1.0.1",
]
openai = [
    "openai>=1.51.2",
    "tiktoken>=0.8.0",
]
anthropic = [
    "anthropic>=0.37.1",
]

[tool.uv]
dev-dependencies = [
    "bandit>=1.7.10",
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
     "COM812", "COM819",
     "D100", "D203", "D213", "D300",
     "E111", "E114", "E117",
     "ISC001", "ISC002",
     "Q000", "Q001", "Q002", "Q003",
     "W191",
     "T",
     "D",
 ]

# testsディレクトリ配下のみにS101を無効化
per-file-ignores = { "tests/*" = ["S101"] }

 # Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
files = [ "*.py"]
strict = true
pretty = true
disallow_untyped_defs = "True"
ignore_missing_imports = true
exclude = ["notebooks", "examples", "example_data", "lsrc/pydantic"]
disable_error_code = ["misc"]

[tool.pytest.ini_options]
pythonpath = [ "src"]
testpaths = [
  "tests"
]
addopts = "-v --cov=src -n auto  --html=.test/pytest_report.html"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks integration tests"
]
